tests/fsharp/typecheck/sigs/neg134.bsl

neg134.fs(5,12,5,29): typecheck error FS0001: This expression was expected to have type
    'bool'
but here has type
    'int'
    
    
neg134.fs(10,12,10,16): typecheck error FS0001: This expression was expected to have type
    'Async<'a>'
but here has type
    'bool'


neg134.fs(15,9,15,10): typecheck error FS0001: This expression was expected to have type
    'Async<'a>'
but here has type
    'int'